# text-recog-translation

./: Azure_APIs.ipynb  pyproject.toml  quickstart.py
